@@ -1,3 +1,12 @@
+2008-09-15 Raphael Neider <rneider AT web.de>
+
+	* src/pic16/device.c (pic16_dump_usection): force udata sections
+	  into the addressable range (0..0xFFF), workaround for a gpsim
+	  bug preventing simulation of regtest bug1750318
+	* src/pic16/ralloc.c (deassignLRs): cosmetic changes,
+	  (serialRegAssign): fixed regtest bug-971834,
+	  (pic16_packRegisters): avoid null-pointer dereference
+
 2008-09-14 Raphael Neider <rneider AT web.de>
 
 	* src/pic16/gen.c, src/pic16/ralloc.c: use
